syntax = "proto3";

option csharp_namespace = "LoteTablas.Grpc.Definitions";

package LotteryService;

import "common.proto";

// The greeting service definition.
service Lottery {

    // Lottery
    rpc GetLotteriesByUserId (Common.UserIdRequest) returns (LotteriesReply);

    rpc GetLotteriesByLotteryType (LotteryTypeIDRequest) returns (LotteriesReply);

    rpc GetFreeLotteries (Common.EmptyRequest) returns (LotteriesReply);

    rpc GetLottery (LotteryIDRequest) returns (LotteryModel);

    rpc GetLotteryTypes (Common.EmptyRequest) returns (LotteryTypesReply);
  
    rpc GetLotteryCardsByLotteryID (LotteryIDRequest) returns (LotteryCardsReply);  

}

message LotteryTypeIDRequest {
	int32 lotteryTypeID = 1;
}

message LotteryIDRequest {
	int32 lotteryID = 1;
}

message LotteriesReply {
  repeated LotteryModel lotteries = 1;
}

message LotteryModel {
	int32 lotteryID  = 1;
	string name  = 2;
	string description = 3;
	int32 lotteryTypeID = 4;
	string lotteryType = 5;
	int32 ownerUserID = 6;
}


message LotteryTypesReply {
	repeated LotteryTypeModel lotteryTypes = 1;
}


message LotteryTypeModel {
	int32  lotteryTypeID = 1;
	string name = 2;
	string description = 3;
	string code = 4;
}

message LotteryCardsReply {
	repeated LotteryCardModel lotteryCards = 1;
}

message LotteryCardModel {
	int32 cardID  = 1;
	string name = 2;
	string description = 3;
	string imageSmallPath = 4;
	string imageMediumPath = 5;
	string imageBigPath = 6;
	int32 ordinal = 7;
}
